# rustlings

./: Cargo.toml
dev/: Cargo.toml
exercises/: README.md
exercises/03_if/: if2.rs
exercises/07_structs/: README.md  structs10.rs  structs4.rs  structs5.rs  structs6.rs  structs7.rs  structs8.rs  structs9.rs
exercises/08_enums/: README.md  enums10.rs  enums4.rs  enums5.rs  enums6.rs  enums7.rs  enums8.rs  enums9.rs
exercises/09_strings/: README.md  strings10.rs  strings11.rs  strings12.rs  strings13.rs  strings14.rs  strings15.rs  strings16.rs  strings17.rs  strings18.rs  strings19.rs  strings20.rs  strings5.rs  strings6.rs  strings7.rs  strings8.rs  strings9.rs
exercises/10_modules/: README.md  modules4.rs  modules5.rs  modules6.rs  modules7.rs  modules8.rs
exercises/11_hashmaps/: README.md  hashmaps4.rs  hashmaps5.rs  hashmaps6.rs  hashmaps7.rs  hashmaps8.rs
exercises/12_options/: README.md  options10.rs  options4.rs  options5.rs  options6.rs  options7.rs  options8.rs  options9.rs
exercises/14_generics/: README.md  generics10.rs  generics3.rs  generics4.rs  generics5.rs  generics6.rs  generics7.rs  generics8.rs  generics9.rs
exercises/15_traits/: README.md  traits10.rs  traits6.rs  traits7.rs  traits8.rs  traits9.rs
exercises/16_lifetimes/: README.md  lifetimes10.rs  lifetimes4.rs  lifetimes5.rs  lifetimes6.rs  lifetimes7.rs  lifetimes8.rs  lifetimes9.rs
exercises/17_tests/: README.md  tests4.rs  tests5.rs  tests6.rs  tests7.rs  tests8.rs
exercises/18_iterators/: README.md  iterators10.rs  iterators6.rs  iterators7.rs  iterators8.rs  iterators9.rs
exercises/19_smart_pointers/: README.md  smart_pointers10.rs  smart_pointers5.rs  smart_pointers6.rs  smart_pointers7.rs  smart_pointers8.rs  smart_pointers9.rs
exercises/20_threads/: README.md  threads4.rs  threads5.rs  threads6.rs  threads7.rs  threads8.rs
exercises/24_projects/: README.md  projects1.rs  projects2.rs  projects3.rs  projects4.rs  projects5.rs
rustlings-macros/: info.toml
solutions/07_structs/: structs10.rs  structs4.rs  structs5.rs  structs6.rs  structs7.rs  structs8.rs  structs9.rs
solutions/08_enums/: enums10.rs  enums4.rs  enums5.rs  enums6.rs  enums7.rs  enums8.rs  enums9.rs
solutions/09_strings/: strings10.rs  strings11.rs  strings12.rs  strings13.rs  strings14.rs  strings15.rs  strings16.rs  strings17.rs  strings18.rs  strings19.rs  strings20.rs  strings5.rs  strings6.rs  strings7.rs  strings8.rs  strings9.rs
solutions/10_modules/: modules4.rs  modules5.rs  modules6.rs  modules7.rs  modules8.rs
solutions/11_hashmaps/: hashmaps4.rs  hashmaps5.rs  hashmaps6.rs  hashmaps7.rs  hashmaps8.rs
solutions/12_options/: options10.rs  options4.rs  options5.rs  options6.rs  options7.rs  options8.rs  options9.rs
solutions/14_generics/: generics10.rs  generics3.rs  generics4.rs  generics5.rs  generics6.rs  generics7.rs  generics8.rs  generics9.rs
solutions/15_traits/: traits10.rs  traits6.rs  traits7.rs  traits8.rs  traits9.rs
solutions/16_lifetimes/: lifetimes10.rs  lifetimes4.rs  lifetimes5.rs  lifetimes6.rs  lifetimes7.rs  lifetimes8.rs  lifetimes9.rs
solutions/17_tests/: tests4.rs  tests5.rs  tests6.rs  tests7.rs  tests8.rs
solutions/18_iterators/: iterators10.rs  iterators6.rs  iterators7.rs  iterators8.rs  iterators9.rs
solutions/19_smart_pointers/: smart_pointers10.rs  smart_pointers5.rs  smart_pointers6.rs  smart_pointers7.rs  smart_pointers8.rs  smart_pointers9.rs
solutions/20_threads/: threads4.rs  threads5.rs  threads6.rs  threads7.rs  threads8.rs
solutions/24_projects/: projects1.rs  projects2.rs  projects3.rs  projects4.rs  projects5.rs
