# Don't edit the `bin` list manually! It is updated by `cargo dev update`. This comment line will be stripped in `rustlings init`.
bin = [
  { name = "intro1", path = "../exercises/00_intro/intro1.rs" },
  { name = "intro1_sol", path = "../solutions/00_intro/intro1.rs" },
  { name = "intro2", path = "../exercises/00_intro/intro2.rs" },
  { name = "intro2_sol", path = "../solutions/00_intro/intro2.rs" },
  { name = "variables1", path = "../exercises/01_variables/variables1.rs" },
  { name = "variables1_sol", path = "../solutions/01_variables/variables1.rs" },
  { name = "variables2", path = "../exercises/01_variables/variables2.rs" },
  { name = "variables2_sol", path = "../solutions/01_variables/variables2.rs" },
  { name = "variables3", path = "../exercises/01_variables/variables3.rs" },
  { name = "variables3_sol", path = "../solutions/01_variables/variables3.rs" },
  { name = "variables4", path = "../exercises/01_variables/variables4.rs" },
  { name = "variables4_sol", path = "../solutions/01_variables/variables4.rs" },
  { name = "variables5", path = "../exercises/01_variables/variables5.rs" },
  { name = "variables5_sol", path = "../solutions/01_variables/variables5.rs" },
  { name = "variables6", path = "../exercises/01_variables/variables6.rs" },
  { name = "variables6_sol", path = "../solutions/01_variables/variables6.rs" },
  { name = "functions1", path = "../exercises/02_functions/functions1.rs" },
  { name = "functions1_sol", path = "../solutions/02_functions/functions1.rs" },
  { name = "functions2", path = "../exercises/02_functions/functions2.rs" },
  { name = "functions2_sol", path = "../solutions/02_functions/functions2.rs" },
  { name = "functions3", path = "../exercises/02_functions/functions3.rs" },
  { name = "functions3_sol", path = "../solutions/02_functions/functions3.rs" },
  { name = "functions4", path = "../exercises/02_functions/functions4.rs" },
  { name = "functions4_sol", path = "../solutions/02_functions/functions4.rs" },
  { name = "functions5", path = "../exercises/02_functions/functions5.rs" },
  { name = "functions5_sol", path = "../solutions/02_functions/functions5.rs" },
  { name = "if1", path = "../exercises/03_if/if1.rs" },
  { name = "if1_sol", path = "../solutions/03_if/if1.rs" },
  { name = "if2", path = "../exercises/03_if/if2.rs" },
  { name = "if2_sol", path = "../solutions/03_if/if2.rs" },
  { name = "if3", path = "../exercises/03_if/if3.rs" },
  { name = "if3_sol", path = "../solutions/03_if/if3.rs" },
  { name = "quiz1", path = "../exercises/quizzes/quiz1.rs" },
  { name = "quiz1_sol", path = "../solutions/quizzes/quiz1.rs" },
  { name = "primitive_types1", path = "../exercises/04_primitive_types/primitive_types1.rs" },
  { name = "primitive_types1_sol", path = "../solutions/04_primitive_types/primitive_types1.rs" },
  { name = "primitive_types2", path = "../exercises/04_primitive_types/primitive_types2.rs" },
  { name = "primitive_types2_sol", path = "../solutions/04_primitive_types/primitive_types2.rs" },
  { name = "primitive_types3", path = "../exercises/04_primitive_types/primitive_types3.rs" },
  { name = "primitive_types3_sol", path = "../solutions/04_primitive_types/primitive_types3.rs" },
  { name = "primitive_types4", path = "../exercises/04_primitive_types/primitive_types4.rs" },
  { name = "primitive_types4_sol", path = "../solutions/04_primitive_types/primitive_types4.rs" },
  { name = "primitive_types5", path = "../exercises/04_primitive_types/primitive_types5.rs" },
  { name = "primitive_types5_sol", path = "../solutions/04_primitive_types/primitive_types5.rs" },
  { name = "primitive_types6", path = "../exercises/04_primitive_types/primitive_types6.rs" },
  { name = "primitive_types6_sol", path = "../solutions/04_primitive_types/primitive_types6.rs" },
  { name = "vecs1", path = "../exercises/05_vecs/vecs1.rs" },
  { name = "vecs1_sol", path = "../solutions/05_vecs/vecs1.rs" },
  { name = "vecs2", path = "../exercises/05_vecs/vecs2.rs" },
  { name = "vecs2_sol", path = "../solutions/05_vecs/vecs2.rs" },
  { name = "move_semantics1", path = "../exercises/06_move_semantics/move_semantics1.rs" },
  { name = "move_semantics1_sol", path = "../solutions/06_move_semantics/move_semantics1.rs" },
  { name = "move_semantics2", path = "../exercises/06_move_semantics/move_semantics2.rs" },
  { name = "move_semantics2_sol", path = "../solutions/06_move_semantics/move_semantics2.rs" },
  { name = "move_semantics3", path = "../exercises/06_move_semantics/move_semantics3.rs" },
  { name = "move_semantics3_sol", path = "../solutions/06_move_semantics/move_semantics3.rs" },
  { name = "move_semantics4", path = "../exercises/06_move_semantics/move_semantics4.rs" },
  { name = "move_semantics4_sol", path = "../solutions/06_move_semantics/move_semantics4.rs" },
  { name = "move_semantics5", path = "../exercises/06_move_semantics/move_semantics5.rs" },
  { name = "move_semantics5_sol", path = "../solutions/06_move_semantics/move_semantics5.rs" },
  { name = "structs1", path = "../exercises/07_structs/structs1.rs" },
  { name = "structs1_sol", path = "../solutions/07_structs/structs1.rs" },
  { name = "structs2", path = "../exercises/07_structs/structs2.rs" },
  { name = "structs2_sol", path = "../solutions/07_structs/structs2.rs" },
  { name = "structs3", path = "../exercises/07_structs/structs3.rs" },
  { name = "structs3_sol", path = "../solutions/07_structs/structs3.rs" },
  { name = "structs4", path = "../exercises/07_structs/structs4.rs" },
  { name = "structs4_sol", path = "../solutions/07_structs/structs4.rs" },
  { name = "structs5", path = "../exercises/07_structs/structs5.rs" },
  { name = "structs5_sol", path = "../solutions/07_structs/structs5.rs" },
  { name = "structs6", path = "../exercises/07_structs/structs6.rs" },
  { name = "structs6_sol", path = "../solutions/07_structs/structs6.rs" },
  { name = "structs7", path = "../exercises/07_structs/structs7.rs" },
  { name = "structs7_sol", path = "../solutions/07_structs/structs7.rs" },
  { name = "structs8", path = "../exercises/07_structs/structs8.rs" },
  { name = "structs8_sol", path = "../solutions/07_structs/structs8.rs" },
  { name = "structs9", path = "../exercises/07_structs/structs9.rs" },
  { name = "structs9_sol", path = "../solutions/07_structs/structs9.rs" },
  { name = "structs10", path = "../exercises/07_structs/structs10.rs" },
  { name = "structs10_sol", path = "../solutions/07_structs/structs10.rs" },
  { name = "enums1", path = "../exercises/08_enums/enums1.rs" },
  { name = "enums1_sol", path = "../solutions/08_enums/enums1.rs" },
  { name = "enums2", path = "../exercises/08_enums/enums2.rs" },
  { name = "enums2_sol", path = "../solutions/08_enums/enums2.rs" },
  { name = "enums3", path = "../exercises/08_enums/enums3.rs" },
  { name = "enums3_sol", path = "../solutions/08_enums/enums3.rs" },
  { name = "enums4", path = "../exercises/08_enums/enums4.rs" },
  { name = "enums4_sol", path = "../solutions/08_enums/enums4.rs" },
  { name = "enums5", path = "../exercises/08_enums/enums5.rs" },
  { name = "enums5_sol", path = "../solutions/08_enums/enums5.rs" },
  { name = "enums6", path = "../exercises/08_enums/enums6.rs" },
  { name = "enums6_sol", path = "../solutions/08_enums/enums6.rs" },
  { name = "enums7", path = "../exercises/08_enums/enums7.rs" },
  { name = "enums7_sol", path = "../solutions/08_enums/enums7.rs" },
  { name = "enums8", path = "../exercises/08_enums/enums8.rs" },
  { name = "enums8_sol", path = "../solutions/08_enums/enums8.rs" },
  { name = "enums9", path = "../exercises/08_enums/enums9.rs" },
  { name = "enums9_sol", path = "../solutions/08_enums/enums9.rs" },
  { name = "enums10", path = "../exercises/08_enums/enums10.rs" },
  { name = "enums10_sol", path = "../solutions/08_enums/enums10.rs" },
  { name = "strings1", path = "../exercises/09_strings/strings1.rs" },
  { name = "strings1_sol", path = "../solutions/09_strings/strings1.rs" },
  { name = "strings2", path = "../exercises/09_strings/strings2.rs" },
  { name = "strings2_sol", path = "../solutions/09_strings/strings2.rs" },
  { name = "strings3", path = "../exercises/09_strings/strings3.rs" },
  { name = "strings3_sol", path = "../solutions/09_strings/strings3.rs" },
  { name = "strings4", path = "../exercises/09_strings/strings4.rs" },
  { name = "strings4_sol", path = "../solutions/09_strings/strings4.rs" },
  { name = "strings5", path = "../exercises/09_strings/strings5.rs" },
  { name = "strings5_sol", path = "../solutions/09_strings/strings5.rs" },
  { name = "strings6", path = "../exercises/09_strings/strings6.rs" },
  { name = "strings6_sol", path = "../solutions/09_strings/strings6.rs" },
  { name = "strings7", path = "../exercises/09_strings/strings7.rs" },
  { name = "strings7_sol", path = "../solutions/09_strings/strings7.rs" },
  { name = "strings8", path = "../exercises/09_strings/strings8.rs" },
  { name = "strings8_sol", path = "../solutions/09_strings/strings8.rs" },
  { name = "strings9", path = "../exercises/09_strings/strings9.rs" },
  { name = "strings9_sol", path = "../solutions/09_strings/strings9.rs" },
  { name = "strings10", path = "../exercises/09_strings/strings10.rs" },
  { name = "strings10_sol", path = "../solutions/09_strings/strings10.rs" },
  { name = "strings11", path = "../exercises/09_strings/strings11.rs" },
  { name = "strings11_sol", path = "../solutions/09_strings/strings11.rs" },
  { name = "strings12", path = "../exercises/09_strings/strings12.rs" },
  { name = "strings12_sol", path = "../solutions/09_strings/strings12.rs" },
  { name = "strings13", path = "../exercises/09_strings/strings13.rs" },
  { name = "strings13_sol", path = "../solutions/09_strings/strings13.rs" },
  { name = "strings14", path = "../exercises/09_strings/strings14.rs" },
  { name = "strings14_sol", path = "../solutions/09_strings/strings14.rs" },
  { name = "strings15", path = "../exercises/09_strings/strings15.rs" },
  { name = "strings15_sol", path = "../solutions/09_strings/strings15.rs" },
  { name = "strings16", path = "../exercises/09_strings/strings16.rs" },
  { name = "strings16_sol", path = "../solutions/09_strings/strings16.rs" },
  { name = "strings17", path = "../exercises/09_strings/strings17.rs" },
  { name = "strings17_sol", path = "../solutions/09_strings/strings17.rs" },
  { name = "strings18", path = "../exercises/09_strings/strings18.rs" },
  { name = "strings18_sol", path = "../solutions/09_strings/strings18.rs" },
  { name = "strings19", path = "../exercises/09_strings/strings19.rs" },
  { name = "strings19_sol", path = "../solutions/09_strings/strings19.rs" },
  { name = "strings20", path = "../exercises/09_strings/strings20.rs" },
  { name = "strings20_sol", path = "../solutions/09_strings/strings20.rs" },
  { name = "modules1", path = "../exercises/10_modules/modules1.rs" },
  { name = "modules1_sol", path = "../solutions/10_modules/modules1.rs" },
  { name = "modules2", path = "../exercises/10_modules/modules2.rs" },
  { name = "modules2_sol", path = "../solutions/10_modules/modules2.rs" },
  { name = "modules3", path = "../exercises/10_modules/modules3.rs" },
  { name = "modules3_sol", path = "../solutions/10_modules/modules3.rs" },
  { name = "modules4", path = "../exercises/10_modules/modules4.rs" },
  { name = "modules4_sol", path = "../solutions/10_modules/modules4.rs" },
  { name = "modules5", path = "../exercises/10_modules/modules5.rs" },
  { name = "modules5_sol", path = "../solutions/10_modules/modules5.rs" },
  { name = "modules6", path = "../exercises/10_modules/modules6.rs" },
  { name = "modules6_sol", path = "../solutions/10_modules/modules6.rs" },
  { name = "modules7", path = "../exercises/10_modules/modules7.rs" },
  { name = "modules7_sol", path = "../solutions/10_modules/modules7.rs" },
  { name = "modules8", path = "../exercises/10_modules/modules8.rs" },
  { name = "modules8_sol", path = "../solutions/10_modules/modules8.rs" },
  { name = "hashmaps1", path = "../exercises/11_hashmaps/hashmaps1.rs" },
  { name = "hashmaps1_sol", path = "../solutions/11_hashmaps/hashmaps1.rs" },
  { name = "hashmaps2", path = "../exercises/11_hashmaps/hashmaps2.rs" },
  { name = "hashmaps2_sol", path = "../solutions/11_hashmaps/hashmaps2.rs" },
  { name = "hashmaps3", path = "../exercises/11_hashmaps/hashmaps3.rs" },
  { name = "hashmaps3_sol", path = "../solutions/11_hashmaps/hashmaps3.rs" },
  { name = "hashmaps4", path = "../exercises/11_hashmaps/hashmaps4.rs" },
  { name = "hashmaps4_sol", path = "../solutions/11_hashmaps/hashmaps4.rs" },
  { name = "hashmaps5", path = "../exercises/11_hashmaps/hashmaps5.rs" },
  { name = "hashmaps5_sol", path = "../solutions/11_hashmaps/hashmaps5.rs" },
  { name = "hashmaps6", path = "../exercises/11_hashmaps/hashmaps6.rs" },
  { name = "hashmaps6_sol", path = "../solutions/11_hashmaps/hashmaps6.rs" },
  { name = "hashmaps7", path = "../exercises/11_hashmaps/hashmaps7.rs" },
  { name = "hashmaps7_sol", path = "../solutions/11_hashmaps/hashmaps7.rs" },
  { name = "hashmaps8", path = "../exercises/11_hashmaps/hashmaps8.rs" },
  { name = "hashmaps8_sol", path = "../solutions/11_hashmaps/hashmaps8.rs" },
  { name = "quiz2", path = "../exercises/quizzes/quiz2.rs" },
  { name = "quiz2_sol", path = "../solutions/quizzes/quiz2.rs" },
  { name = "options1", path = "../exercises/12_options/options1.rs" },
  { name = "options1_sol", path = "../solutions/12_options/options1.rs" },
  { name = "options2", path = "../exercises/12_options/options2.rs" },
  { name = "options2_sol", path = "../solutions/12_options/options2.rs" },
  { name = "options3", path = "../exercises/12_options/options3.rs" },
  { name = "options3_sol", path = "../solutions/12_options/options3.rs" },
  { name = "options4", path = "../exercises/12_options/options4.rs" },
  { name = "options4_sol", path = "../solutions/12_options/options4.rs" },
  { name = "options5", path = "../exercises/12_options/options5.rs" },
  { name = "options5_sol", path = "../solutions/12_options/options5.rs" },
  { name = "options6", path = "../exercises/12_options/options6.rs" },
  { name = "options6_sol", path = "../solutions/12_options/options6.rs" },
  { name = "options7", path = "../exercises/12_options/options7.rs" },
  { name = "options7_sol", path = "../solutions/12_options/options7.rs" },
  { name = "options8", path = "../exercises/12_options/options8.rs" },
  { name = "options8_sol", path = "../solutions/12_options/options8.rs" },
  { name = "options9", path = "../exercises/12_options/options9.rs" },
  { name = "options9_sol", path = "../solutions/12_options/options9.rs" },
  { name = "options10", path = "../exercises/12_options/options10.rs" },
  { name = "options10_sol", path = "../solutions/12_options/options10.rs" },
  { name = "errors1", path = "../exercises/13_error_handling/errors1.rs" },
  { name = "errors1_sol", path = "../solutions/13_error_handling/errors1.rs" },
  { name = "errors2", path = "../exercises/13_error_handling/errors2.rs" },
  { name = "errors2_sol", path = "../solutions/13_error_handling/errors2.rs" },
  { name = "errors3", path = "../exercises/13_error_handling/errors3.rs" },
  { name = "errors3_sol", path = "../solutions/13_error_handling/errors3.rs" },
  { name = "errors4", path = "../exercises/13_error_handling/errors4.rs" },
  { name = "errors4_sol", path = "../solutions/13_error_handling/errors4.rs" },
  { name = "errors5", path = "../exercises/13_error_handling/errors5.rs" },
  { name = "errors5_sol", path = "../solutions/13_error_handling/errors5.rs" },
  { name = "errors6", path = "../exercises/13_error_handling/errors6.rs" },
  { name = "errors6_sol", path = "../solutions/13_error_handling/errors6.rs" },
  { name = "generics1", path = "../exercises/14_generics/generics1.rs" },
  { name = "generics1_sol", path = "../solutions/14_generics/generics1.rs" },
  { name = "generics2", path = "../exercises/14_generics/generics2.rs" },
  { name = "generics2_sol", path = "../solutions/14_generics/generics2.rs" },
  { name = "generics3", path = "../exercises/14_generics/generics3.rs" },
  { name = "generics3_sol", path = "../solutions/14_generics/generics3.rs" },
  { name = "generics4", path = "../exercises/14_generics/generics4.rs" },
  { name = "generics4_sol", path = "../solutions/14_generics/generics4.rs" },
  { name = "generics5", path = "../exercises/14_generics/generics5.rs" },
  { name = "generics5_sol", path = "../solutions/14_generics/generics5.rs" },
  { name = "generics6", path = "../exercises/14_generics/generics6.rs" },
  { name = "generics6_sol", path = "../solutions/14_generics/generics6.rs" },
  { name = "generics7", path = "../exercises/14_generics/generics7.rs" },
  { name = "generics7_sol", path = "../solutions/14_generics/generics7.rs" },
  { name = "generics8", path = "../exercises/14_generics/generics8.rs" },
  { name = "generics8_sol", path = "../solutions/14_generics/generics8.rs" },
  { name = "generics9", path = "../exercises/14_generics/generics9.rs" },
  { name = "generics9_sol", path = "../solutions/14_generics/generics9.rs" },
  { name = "generics10", path = "../exercises/14_generics/generics10.rs" },
  { name = "generics10_sol", path = "../solutions/14_generics/generics10.rs" },
  { name = "traits1", path = "../exercises/15_traits/traits1.rs" },
  { name = "traits1_sol", path = "../solutions/15_traits/traits1.rs" },
  { name = "traits2", path = "../exercises/15_traits/traits2.rs" },
  { name = "traits2_sol", path = "../solutions/15_traits/traits2.rs" },
  { name = "traits3", path = "../exercises/15_traits/traits3.rs" },
  { name = "traits3_sol", path = "../solutions/15_traits/traits3.rs" },
  { name = "traits4", path = "../exercises/15_traits/traits4.rs" },
  { name = "traits4_sol", path = "../solutions/15_traits/traits4.rs" },
  { name = "traits5", path = "../exercises/15_traits/traits5.rs" },
  { name = "traits5_sol", path = "../solutions/15_traits/traits5.rs" },
  { name = "traits6", path = "../exercises/15_traits/traits6.rs" },
  { name = "traits6_sol", path = "../solutions/15_traits/traits6.rs" },
  { name = "traits7", path = "../exercises/15_traits/traits7.rs" },
  { name = "traits7_sol", path = "../solutions/15_traits/traits7.rs" },
  { name = "traits8", path = "../exercises/15_traits/traits8.rs" },
  { name = "traits8_sol", path = "../solutions/15_traits/traits8.rs" },
  { name = "traits9", path = "../exercises/15_traits/traits9.rs" },
  { name = "traits9_sol", path = "../solutions/15_traits/traits9.rs" },
  { name = "traits10", path = "../exercises/15_traits/traits10.rs" },
  { name = "traits10_sol", path = "../solutions/15_traits/traits10.rs" },
  { name = "quiz3", path = "../exercises/quizzes/quiz3.rs" },
  { name = "quiz3_sol", path = "../solutions/quizzes/quiz3.rs" },
  { name = "lifetimes1", path = "../exercises/16_lifetimes/lifetimes1.rs" },
  { name = "lifetimes1_sol", path = "../solutions/16_lifetimes/lifetimes1.rs" },
  { name = "lifetimes2", path = "../exercises/16_lifetimes/lifetimes2.rs" },
  { name = "lifetimes2_sol", path = "../solutions/16_lifetimes/lifetimes2.rs" },
  { name = "lifetimes3", path = "../exercises/16_lifetimes/lifetimes3.rs" },
  { name = "lifetimes3_sol", path = "../solutions/16_lifetimes/lifetimes3.rs" },
  { name = "lifetimes4", path = "../exercises/16_lifetimes/lifetimes4.rs" },
  { name = "lifetimes4_sol", path = "../solutions/16_lifetimes/lifetimes4.rs" },
  { name = "lifetimes5", path = "../exercises/16_lifetimes/lifetimes5.rs" },
  { name = "lifetimes5_sol", path = "../solutions/16_lifetimes/lifetimes5.rs" },
  { name = "lifetimes6", path = "../exercises/16_lifetimes/lifetimes6.rs" },
  { name = "lifetimes6_sol", path = "../solutions/16_lifetimes/lifetimes6.rs" },
  { name = "lifetimes7", path = "../exercises/16_lifetimes/lifetimes7.rs" },
  { name = "lifetimes7_sol", path = "../solutions/16_lifetimes/lifetimes7.rs" },
  { name = "lifetimes8", path = "../exercises/16_lifetimes/lifetimes8.rs" },
  { name = "lifetimes8_sol", path = "../solutions/16_lifetimes/lifetimes8.rs" },
  { name = "lifetimes9", path = "../exercises/16_lifetimes/lifetimes9.rs" },
  { name = "lifetimes9_sol", path = "../solutions/16_lifetimes/lifetimes9.rs" },
  { name = "lifetimes10", path = "../exercises/16_lifetimes/lifetimes10.rs" },
  { name = "lifetimes10_sol", path = "../solutions/16_lifetimes/lifetimes10.rs" },
  { name = "tests1", path = "../exercises/17_tests/tests1.rs" },
  { name = "tests1_sol", path = "../solutions/17_tests/tests1.rs" },
  { name = "tests2", path = "../exercises/17_tests/tests2.rs" },
  { name = "tests2_sol", path = "../solutions/17_tests/tests2.rs" },
  { name = "tests3", path = "../exercises/17_tests/tests3.rs" },
  { name = "tests3_sol", path = "../solutions/17_tests/tests3.rs" },
  { name = "tests4", path = "../exercises/17_tests/tests4.rs" },
  { name = "tests4_sol", path = "../solutions/17_tests/tests4.rs" },
  { name = "tests5", path = "../exercises/17_tests/tests5.rs" },
  { name = "tests5_sol", path = "../solutions/17_tests/tests5.rs" },
  { name = "tests6", path = "../exercises/17_tests/tests6.rs" },
  { name = "tests6_sol", path = "../solutions/17_tests/tests6.rs" },
  { name = "tests7", path = "../exercises/17_tests/tests7.rs" },
  { name = "tests7_sol", path = "../solutions/17_tests/tests7.rs" },
  { name = "tests8", path = "../exercises/17_tests/tests8.rs" },
  { name = "tests8_sol", path = "../solutions/17_tests/tests8.rs" },
  { name = "iterators1", path = "../exercises/18_iterators/iterators1.rs" },
  { name = "iterators1_sol", path = "../solutions/18_iterators/iterators1.rs" },
  { name = "iterators2", path = "../exercises/18_iterators/iterators2.rs" },
  { name = "iterators2_sol", path = "../solutions/18_iterators/iterators2.rs" },
  { name = "iterators3", path = "../exercises/18_iterators/iterators3.rs" },
  { name = "iterators3_sol", path = "../solutions/18_iterators/iterators3.rs" },
  { name = "iterators4", path = "../exercises/18_iterators/iterators4.rs" },
  { name = "iterators4_sol", path = "../solutions/18_iterators/iterators4.rs" },
  { name = "iterators5", path = "../exercises/18_iterators/iterators5.rs" },
  { name = "iterators5_sol", path = "../solutions/18_iterators/iterators5.rs" },
  { name = "iterators6", path = "../exercises/18_iterators/iterators6.rs" },
  { name = "iterators6_sol", path = "../solutions/18_iterators/iterators6.rs" },
  { name = "iterators7", path = "../exercises/18_iterators/iterators7.rs" },
  { name = "iterators7_sol", path = "../solutions/18_iterators/iterators7.rs" },
  { name = "iterators8", path = "../exercises/18_iterators/iterators8.rs" },
  { name = "iterators8_sol", path = "../solutions/18_iterators/iterators8.rs" },
  { name = "iterators9", path = "../exercises/18_iterators/iterators9.rs" },
  { name = "iterators9_sol", path = "../solutions/18_iterators/iterators9.rs" },
  { name = "iterators10", path = "../exercises/18_iterators/iterators10.rs" },
  { name = "iterators10_sol", path = "../solutions/18_iterators/iterators10.rs" },
  { name = "smart_pointers1", path = "../exercises/19_smart_pointers/smart_pointers1.rs" },
  { name = "smart_pointers1_sol", path = "../solutions/19_smart_pointers/smart_pointers1.rs" },
  { name = "smart_pointers2", path = "../exercises/19_smart_pointers/smart_pointers2.rs" },
  { name = "smart_pointers2_sol", path = "../solutions/19_smart_pointers/smart_pointers2.rs" },
  { name = "smart_pointers3", path = "../exercises/19_smart_pointers/smart_pointers3.rs" },
  { name = "smart_pointers3_sol", path = "../solutions/19_smart_pointers/smart_pointers3.rs" },
  { name = "smart_pointers4", path = "../exercises/19_smart_pointers/smart_pointers4.rs" },
  { name = "smart_pointers4_sol", path = "../solutions/19_smart_pointers/smart_pointers4.rs" },
  { name = "smart_pointers5", path = "../exercises/19_smart_pointers/smart_pointers5.rs" },
  { name = "smart_pointers5_sol", path = "../solutions/19_smart_pointers/smart_pointers5.rs" },
  { name = "smart_pointers6", path = "../exercises/19_smart_pointers/smart_pointers6.rs" },
  { name = "smart_pointers6_sol", path = "../solutions/19_smart_pointers/smart_pointers6.rs" },
  { name = "smart_pointers7", path = "../exercises/19_smart_pointers/smart_pointers7.rs" },
  { name = "smart_pointers7_sol", path = "../solutions/19_smart_pointers/smart_pointers7.rs" },
  { name = "smart_pointers8", path = "../exercises/19_smart_pointers/smart_pointers8.rs" },
  { name = "smart_pointers8_sol", path = "../solutions/19_smart_pointers/smart_pointers8.rs" },
  { name = "smart_pointers9", path = "../exercises/19_smart_pointers/smart_pointers9.rs" },
  { name = "smart_pointers9_sol", path = "../solutions/19_smart_pointers/smart_pointers9.rs" },
  { name = "smart_pointers10", path = "../exercises/19_smart_pointers/smart_pointers10.rs" },
  { name = "smart_pointers10_sol", path = "../solutions/19_smart_pointers/smart_pointers10.rs" },
  { name = "threads1", path = "../exercises/20_threads/threads1.rs" },
  { name = "threads1_sol", path = "../solutions/20_threads/threads1.rs" },
  { name = "threads2", path = "../exercises/20_threads/threads2.rs" },
  { name = "threads2_sol", path = "../solutions/20_threads/threads2.rs" },
  { name = "threads3", path = "../exercises/20_threads/threads3.rs" },
  { name = "threads3_sol", path = "../solutions/20_threads/threads3.rs" },
  { name = "threads4", path = "../exercises/20_threads/threads4.rs" },
  { name = "threads4_sol", path = "../solutions/20_threads/threads4.rs" },
  { name = "threads5", path = "../exercises/20_threads/threads5.rs" },
  { name = "threads5_sol", path = "../solutions/20_threads/threads5.rs" },
  { name = "threads6", path = "../exercises/20_threads/threads6.rs" },
  { name = "threads6_sol", path = "../solutions/20_threads/threads6.rs" },
  { name = "threads7", path = "../exercises/20_threads/threads7.rs" },
  { name = "threads7_sol", path = "../solutions/20_threads/threads7.rs" },
  { name = "threads8", path = "../exercises/20_threads/threads8.rs" },
  { name = "threads8_sol", path = "../solutions/20_threads/threads8.rs" },
  { name = "macros1", path = "../exercises/21_macros/macros1.rs" },
  { name = "macros1_sol", path = "../solutions/21_macros/macros1.rs" },
  { name = "macros2", path = "../exercises/21_macros/macros2.rs" },
  { name = "macros2_sol", path = "../solutions/21_macros/macros2.rs" },
  { name = "macros3", path = "../exercises/21_macros/macros3.rs" },
  { name = "macros3_sol", path = "../solutions/21_macros/macros3.rs" },
  { name = "macros4", path = "../exercises/21_macros/macros4.rs" },
  { name = "macros4_sol", path = "../solutions/21_macros/macros4.rs" },
  { name = "clippy1", path = "../exercises/22_clippy/clippy1.rs" },
  { name = "clippy1_sol", path = "../solutions/22_clippy/clippy1.rs" },
  { name = "clippy2", path = "../exercises/22_clippy/clippy2.rs" },
  { name = "clippy2_sol", path = "../solutions/22_clippy/clippy2.rs" },
  { name = "clippy3", path = "../exercises/22_clippy/clippy3.rs" },
  { name = "clippy3_sol", path = "../solutions/22_clippy/clippy3.rs" },
  { name = "conversions1", path = "../exercises/23_conversions/conversions1.rs" },
  { name = "conversions1_sol", path = "../solutions/23_conversions/conversions1.rs" },
  { name = "conversions2", path = "../exercises/23_conversions/conversions2.rs" },
  { name = "conversions2_sol", path = "../solutions/23_conversions/conversions2.rs" },
  { name = "conversions3", path = "../exercises/23_conversions/conversions3.rs" },
  { name = "conversions3_sol", path = "../solutions/23_conversions/conversions3.rs" },
  { name = "conversions4", path = "../exercises/23_conversions/conversions4.rs" },
  { name = "conversions4_sol", path = "../solutions/23_conversions/conversions4.rs" },
  { name = "conversions5", path = "../exercises/23_conversions/conversions5.rs" },
  { name = "conversions5_sol", path = "../solutions/23_conversions/conversions5.rs" },
]

[package]
name = "exercises"
edition = "2024"
# Don't publish the exercises on crates.io!
publish = false

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"

[lints.rust]
# You shouldn't write unsafe code in Rustlings!
unsafe_code = "forbid"
# You don't need unstable features in Rustlings and shouldn't rely on them while learning Rust.
unstable_features = "forbid"
# Dead code warnings can't be avoided in some exercises and might distract while learning.
dead_code = "allow"

[lints.clippy]
# You forgot a `todo!()`!
todo = "forbid"
# This can only happen by mistake in Rustlings.
empty_loop = "forbid"
# No infinite loops are needed in Rustlings.
infinite_loop = "deny"
# You shouldn't leak memory while still learning Rust!
mem_forget = "deny"
# Currently, there are no disallowed methods. This line avoids problems when developing Rustlings.
disallowed_methods = "allow"
